# scrapy-selenium-extended

./: .gitignore  README.md  pyproject.toml
scrapy_selenium_extended/: __init__.py  middlewares.py  mixins.py
scrapy_webdriver/: middlewares.py  utils.py
tests/: test_middlewares.py
