[tool.poetry]
name = "scrapy-webdriver"
version = "0.1.0"
description = "Scrapy with Selenium webdrivers"
authors = ["XPi2 <uxiopineiro@gmail.com>"]
license = "Unlicensed"

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.4.1"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
flakehell = "^0.9.0"
darglint = "^1.6.0"
pep8-naming = "^0.11.1"
flake8-bandit = "^2.1.2"
flake8-debugger = "^4.0.0"
flake8-class-attributes-order = "^0.1.2"
flake8-docstrings = "^1.5.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
ipdb = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | private
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 99
# Google style, could cause conflicts with black
force_single_line = true
single_line_exclusions = "typing"

[tool.flakehell]
format = "grouped"
max_line_length = 99
show_source = true

[tool.flakehell.plugins]
pyflakes = ["+*"]
pep8-naming = ["+*"]
"flake8-*" = ["+*"]
flake8-docstrings = ["+*", "-D107"]
flake8-darglint = ["-*"]